[project]
name = "log-analyzer"
version = "0.2.0"
description = "AI-powered Log Analyzer - Root cause analysis and suggested fixes using LLM reasoning (LangChain-enabled)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "openai>=1.58.1",
    
    # LangChain v0.2+ (modular - no more monolithic 'langchain')
    "langchain-core>=0.3.12",
    "langchain-groq>=0.2.0",        # ChatGroq for Groq models
    "langchain-community>=0.3.0",   # Community tools/integrations if needed
    
    # Optional: uncomment if using vector DB, OpenAI fallback, etc.
    # "langchain-openai>=0.2.2",    # OpenAI fallback
    # "chromadb>=0.5.11",           # Vector DB
    # "aiohttp>=3.12.1",            # Async HTTP (often needed)
]

[project.scripts]
log-analyzer = "app.main:start"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"